--- a/src/WirePeep/MainWindow.xaml
+++ b/src/WirePeep/MainWindow.xaml
@@ -6,7 +6,8 @@
 		xmlns:m="http://menees.com/xaml"
 		xmlns:local="clr-namespace:WirePeep"
 		mc:Ignorable="d"
-		Title="WirePeep - Network Downtime Monitor" Height="450" Width="800">
+		Title="WirePeep - Network Downtime Monitor" Height="450" Width="800"
+		FocusManager.FocusedElement="{Binding ElementName=statusGrid}">
 
     <Window.CommandBindings>
         <CommandBinding Command="local:Commands.AddLocation" Executed="AddLocationExecuted" />
