--- a/src/WirePeep/OptionsDialog.xaml
+++ b/src/WirePeep/OptionsDialog.xaml
@@ -6,7 +6,8 @@
 		xmlns:m="http://menees.com/xaml"
         xmlns:local="clr-namespace:WirePeep"
         mc:Ignorable="d"
-        Title="Options" Width="400" SizeToContent="Height" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
+        Title="Options" Width="400" SizeToContent="Height" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
+		FocusManager.FocusedElement="{Binding ElementName=logFolder}">
     <Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition/>
@@ -18,6 +19,7 @@
 				<Button Content="..." DockPanel.Dock="Right" Width="20" Margin="8,0,0,0" Click="SelectLogFolderClicked" TabIndex="1"/>
 				<TextBox x:Name="logFolder" TabIndex="0"/>
 			</DockPanel>
+			<!-- TODO: Choose file name mode. [Bill, 5/19/2020] -->
 		</StackPanel>
 		<StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
 			<Button Content="_OK" Width="60" Margin="8,8,0,8" IsDefault="True" Click="OKClicked"/>
