--- a/src/WirePeep/MainWindow.xaml
+++ b/src/WirePeep/MainWindow.xaml
@@ -7,7 +7,7 @@
 		xmlns:local="clr-namespace:WirePeep"
 		mc:Ignorable="d"
 		Title="WirePeep - Network Downtime Monitor" Height="450" Width="800"
-		FocusManager.FocusedElement="{Binding ElementName=statusGrid}">
+		FocusManager.FocusedElement="{Binding ElementName=statusGrid}" Closing="ExtendedWindowClosing">
 
     <Window.CommandBindings>
         <CommandBinding Command="local:Commands.AddLocation" Executed="AddLocationExecuted" />
