--- a/src/WirePeep/PeerGroupDialog.xaml
+++ b/src/WirePeep/PeerGroupDialog.xaml
@@ -6,7 +6,7 @@
 		xmlns:m="http://menees.com/xaml"
         xmlns:local="clr-namespace:WirePeep"
         mc:Ignorable="d"
-        Title="Edit Peer Groups" Width="400" Height="250" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
+        Title="Edit Peer Groups" Width="400" Height="250"
 		FocusManager.FocusedElement="{Binding ElementName=grid}">
 	<Grid>
 		<Grid.RowDefinitions>
@@ -14,7 +14,7 @@
 			<RowDefinition Height="Auto"/>
 		</Grid.RowDefinitions>
 
-		<DataGrid x:Name="grid" Margin="12,12,12,0" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
+		<DataGrid x:Name="grid" Margin="12" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
 				  GridLinesVisibility="Horizontal" AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserSortColumns="False"
 				  AlternatingRowBackground="{DynamicResource {x:Static SystemColors.InactiveBorderBrushKey}}" CanUserResizeRows="False" CanUserResizeColumns="False"
 				  HorizontalGridLinesBrush="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" SelectionMode="Single"
@@ -56,10 +56,12 @@
 			</DataGrid.Columns>
 		</DataGrid>
 
-		<StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-			<Button Content="_OK" Width="60" Margin="12,12,0,12" IsDefault="True" Click="OKClicked"/>
-			<Button Content="_Cancel" Width="60" Margin="12" IsCancel="True"/>
-		</StackPanel>
+		<Border Grid.Row="1" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
+			<StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+				<Button Content="_OK" Width="60" Margin="12,12,0,12" IsDefault="True" Click="OKClicked"/>
+				<Button Content="_Cancel" Width="60" Margin="12" IsCancel="True"/>
+			</StackPanel>
+		</Border>
 	</Grid>
 
 </m:ExtendedDialog>
